--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "test1": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js",
+    "test":"jest"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +17,8 @@
     "joi": "^17.12.2",
     "mongoose": "^8.2.4",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
